--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,8 @@
 	"libVersion": "1.9.94",
 	"appid": "wxab1b0532106710d4",
 	"projectname": "flappyBird",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
